[package]
version = "0.2.0"
name = "embedded-graphics-simulator"
description = "Embedded graphics simulator"
authors = ["James Waples <james@wapl.es>"]
repository = "https://github.com/embedded-graphics/simulator"
documentation = "https://docs.rs/embedded-graphics-simulator"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "simulator", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    "/.circleci/",
    "/.github/",
    ".gitignore",
]

[badges]
circle-ci = { repository = "embedded-graphics/simulator", branch = "master" }

[dependencies]
embedded-graphics = "0.7.0-alpha.2"
image = "0.23.0"

[dependencies.sdl2]
version = "0.32.2"
optional = true

[dev-dependencies]
chrono = "0.4.10"

[dependencies.tinybmp]
# version = "0.2.2"
# TODO: Remove when a new tinybmp version is released
git = "https://github.com/rfuest/tinybmp"
branch = "core"

[dependencies.tinytga]
# version = "0.3.2"
# TODO: Remove when a new tinytga version is released
git = "https://github.com/rfuest/tinytga"
branch = "core"

[features]
default = [ "with-sdl" ]
fixed_point = [ "embedded-graphics/fixed_point" ]
with-sdl = [ "sdl2" ]
